Iteration 4 steb before

--- a/views/index.erb
+++ b/views/index.erb
@@ -4,16 +4,15 @@
     <meta charset="utf-8">
     <title>MovieFinder</title>
   </head>
+
+  <form>
+  <input type="search" name="title">
+</form>
   <body>
-  <h1>MovieFinder</h1>
+    <h1>MovieFinder Search Results</h1>
 
-  <p><%= 2 + 2 %></p>
+    <h2><%= @movie.title %></h2>
 
-
-
-
-  <% ["Snickers", "Starburst", "Twix"].each do |candy| %>
-    <p><%= candy %></p>
-  <% end %>
-</body>
+    <p><%= @movie.plot %></p>
+  </body>
 </html>
